--- a/.github/workflows/test-deploy.yml
+++ b/.github/workflows/test-deploy.yml
@@ -4,9 +4,11 @@ on:
   pull_request_review:
     types: [submitted]
 
+permissions:
+  pull-requests: read
+
 jobs:
   deploy:
-    # run only when review is APPROVED
     if: github.event.review.state == 'approved'
     runs-on: ubuntu-latest
 
@@ -15,7 +17,7 @@ jobs:
         uses: appleboy/ssh-action@v0.1.10
         with:
           host: ${{ secrets.EC2_HOST }}
-          username: ${{ secrets.EC2_USER }}   # e.g. "ubuntu"
+          username: ${{ secrets.EC2_USER }}
           key: ${{ secrets.EC2_SSH_KEY }}
           script: |
             PR_NUMBER=${{ github.event.pull_request.number }}
