--- a/.github/workflows/aws-ssm-opidc.yml
+++ b/.github/workflows/aws-ssm-opidc.yml
@@ -17,15 +17,15 @@ jobs:
       - name: Configure AWS credentials using OIDC
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          role-to-assume: arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/${{ secrets.AWS_DEPLOY_ROLE }}
+          role-to-assume: ${{ secrets.AWS_DEPLOY_ROLE }}
           aws-region: ${{ secrets.AWS_REGION }}
 
-      - name: Deploy via SSM Run Command
-        uses: peterkimzz/aws-ssm-send-command@v1
-        with:
-          document-name: AWS-RunShellScript
-          instance-ids: ${{ secrets.EC2_INSTANCE_ID }}
-          comment: "Deploy PR"
-          command: |
-            PR_NUMBER=${{ github.event.pull_request.number }}
-            /opt/frontend-pr/deploy_front_pr.sh $PR_NUMBER
+      - name: Run SSM Command
+        run: |
+          PR=${{ github.event.pull_request.number }}
+
+          aws ssm send-command \
+            --instance-ids "${{ secrets.EC2_INSTANCE_ID }}" \
+            --document-name "AWS-RunShellScript" \
+            --comment "Deploy PR" \
+            --parameters commands="sudo /opt/frontend-pr/deploy_front_pr.sh $PR"
