--- a/.github/workflows/aws-ssm-opidc.yml
+++ b/.github/workflows/aws-ssm-opidc.yml
@@ -1,3 +1,4 @@
+
 name: Deploy PR to test-front
 
 on:
@@ -17,7 +18,7 @@ jobs:
       - name: Configure AWS credentials using OIDC
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          role-to-assume: ${{ secrets.AWS_DEPLOY_ROLE }}
+          role-to-assume: arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/${{ secrets.AWS_DEPLOY_ROLE }}
           aws-region: ${{ secrets.AWS_REGION }}
 
       - name: Run SSM Command
