--- a/.github/workflows/aws-ssm-opidc.yml
+++ b/.github/workflows/aws-ssm-opidc.yml
@@ -1,77 +1,77 @@
-name: Deploy PR to test-front
+# name: Deploy PR to test-front
 
-on:
-  pull_request_review:
-    types: [submitted]
+# on:
+#   pull_request_review:
+#     types: [submitted]
 
-permissions:
-  id-token: write
-  contents: read
+# permissions:
+#   id-token: write
+#   contents: read
 
-jobs:
-  deploy:
-    if: github.event.review.state == 'approved'
-    runs-on: ubuntu-latest
+# jobs:
+#   deploy:
+#     if: github.event.review.state == 'approved'
+#     runs-on: ubuntu-latest
 
-    steps:
-      - name: Configure AWS credentials using OIDC
-        uses: aws-actions/configure-aws-credentials@v4
-        with:
-          role-to-assume: arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/${{ secrets.AWS_DEPLOY_ROLE }}
-          aws-region: ${{ secrets.AWS_REGION }}
+#     steps:
+#       - name: Configure AWS credentials using OIDC
+#         uses: aws-actions/configure-aws-credentials@v4
+#         with:
+#           role-to-assume: arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/${{ secrets.AWS_DEPLOY_ROLE }}
+#           aws-region: ${{ secrets.AWS_REGION }}
 
-      - name: Trigger Deployment via SSM & Wait For Logs
-        run: |
-          PR=${{ github.event.pull_request.number }}
+#       - name: Trigger Deployment via SSM & Wait For Logs
+#         run: |
+#           PR=${{ github.event.pull_request.number }}
 
-          # 1) Send Command
-          CMD=$(aws ssm send-command \
-            --instance-ids "${{ secrets.EC2_INSTANCE_ID }}" \
-            --document-name "AWS-RunShellScript" \
-            --comment "Deploy PR" \
-            --parameters commands="sudo /opt/frontend-pr/deploy_front_pr.sh $PR" \
-            --query "Command.CommandId" \
-            --output text)
+#           # 1) Send Command
+#           CMD=$(aws ssm send-command \
+#             --instance-ids "${{ secrets.EC2_INSTANCE_ID }}" \
+#             --document-name "AWS-RunShellScript" \
+#             --comment "Deploy PR" \
+#             --parameters commands="sudo /opt/frontend-pr/deploy_front_pr.sh $PR" \
+#             --query "Command.CommandId" \
+#             --output text)
 
-          echo "SSM Command ID: $CMD"
+#           echo "SSM Command ID: $CMD"
 
-          # 2) Wait for command completion
-          STATUS="InProgress"
-          while [[ "$STATUS" == "InProgress" || "$STATUS" == "Pending" ]]; do
-            echo "⏳ Waiting for SSM command to complete..."
-            sleep 5
-            STATUS=$(aws ssm get-command-invocation \
-              --command-id "$CMD" \
-              --instance-id "${{ secrets.EC2_INSTANCE_ID }}" \
-              --query "Status" \
-              --output text 2>/dev/null || echo "Pending")
-          done
+#           # 2) Wait for command completion
+#           STATUS="InProgress"
+#           while [[ "$STATUS" == "InProgress" || "$STATUS" == "Pending" ]]; do
+#             echo "⏳ Waiting for SSM command to complete..."
+#             sleep 5
+#             STATUS=$(aws ssm get-command-invocation \
+#               --command-id "$CMD" \
+#               --instance-id "${{ secrets.EC2_INSTANCE_ID }}" \
+#               --query "Status" \
+#               --output text 2>/dev/null || echo "Pending")
+#           done
 
-          echo "Final Status: $STATUS"
+#           echo "Final Status: $STATUS"
 
-          # 3) Show Logs
-          echo "-------------------------"
-          echo "STDOUT:"
-          echo "-------------------------"
-          aws ssm get-command-invocation \
-            --command-id "$CMD" \
-            --instance-id "${{ secrets.EC2_INSTANCE_ID }}" \
-            --query "StandardOutputContent" \
-            --output text
+#           # 3) Show Logs
+#           echo "-------------------------"
+#           echo "STDOUT:"
+#           echo "-------------------------"
+#           aws ssm get-command-invocation \
+#             --command-id "$CMD" \
+#             --instance-id "${{ secrets.EC2_INSTANCE_ID }}" \
+#             --query "StandardOutputContent" \
+#             --output text
 
-          echo "-------------------------"
-          echo "STDERR:"
-          echo "-------------------------"
-          aws ssm get-command-invocation \
-            --command-id "$CMD" \
-            --instance-id "${{ secrets.EC2_INSTANCE_ID }}" \
-            --query "StandardErrorContent" \
-            --output text
+#           echo "-------------------------"
+#           echo "STDERR:"
+#           echo "-------------------------"
+#           aws ssm get-command-invocation \
+#             --command-id "$CMD" \
+#             --instance-id "${{ secrets.EC2_INSTANCE_ID }}" \
+#             --query "StandardErrorContent" \
+#             --output text
 
-          # 4) Mark failure
-          if [[ "$STATUS" != "Success" ]]; then
-            echo "❌ Deployment failed!"
-            exit 1
-          fi
+#           # 4) Mark failure
+#           if [[ "$STATUS" != "Success" ]]; then
+#             echo "❌ Deployment failed!"
+#             exit 1
+#           fi
 
-          echo "✅ Deployment successful!"
+#           echo "✅ Deployment successful!"
